# octopus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  REUSE.toml  hatch_build.py  package-lock.json  package.json  pyproject.toml  tox.ini
debian/: changelog  control  copyright  rules
docs/: conf.py  index.rst
docs/_ext/: colander.py
docs/_static/css/: table-fix.css  theme-extra.css
docs/source/: octopus.android.device.rst  octopus.android.rst  octopus.capture.device.rst  octopus.capture.frida.rst  octopus.capture.network.rst  octopus.capture.rst  octopus.capture.screen.rst  octopus.frida.instrument_gated.rst  octopus.frida.rst  octopus.frida.server.rst
frida-scripts-src/: __init__.py  agent.ts
frida-scripts-src/pirogue/: dynamic_hook_injector.js  log_ad_ids.js  log_aes_info.js  log_socket_operations.js  no_root.js
octopus/android/: device.py
octopus/capture/: __init__.py  device.py  frida.py  manager.py  network.py  screen.py
octopus/frida/: capture_manager.py  instrument_gated.py  instrument_single.py  server.py
octopus/frida-dynamic-hooks/: location_manager.json  package_manager.json  telephony_manager.json  user_manager.json
octopus/frida-scripts/: agent.js
